--- a/src/components/HomeModule/SearchBar/SearchBarPage.css
+++ b/src/components/HomeModule/SearchBar/SearchBarPage.css
@@ -95,7 +95,7 @@
 
 .searchbarpage-results {
   width: 100%;
-  max-width: 700px;
+  /* max-width: 700px; */
   margin: 0 auto;
   background: transparent;
   min-height: calc(100dvh - 56px);
