--- a/src/components/HomeModule/ProductListing/index3.css
+++ b/src/components/HomeModule/ProductListing/index3.css
@@ -51,7 +51,7 @@
   margin: 0;
 }
 
-.product-listing2-title.one-line {
+.product-listing2-title.one-line-1 {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
