--- a/src/components/HomeModule/FooterNavigation/index.css
+++ b/src/components/HomeModule/FooterNavigation/index.css
@@ -91,6 +91,7 @@
 .footer-icon {
   font-size: 24px;
   margin-bottom: 2px;
+
 }
 
 .footer-label {
@@ -119,4 +120,9 @@
   .footer-label {
     font-size: 0.8rem;
   }
+}
+
+.iconImage{
+  width:100%;
+  aspect-ratio:1/1;
 }
