--- a/src/components/OrderModule/OrderPageStyles.css
+++ b/src/components/OrderModule/OrderPageStyles.css
@@ -28,7 +28,7 @@
   display: flex;
   flex-direction: column;
   gap: 1.5em;
-  margin-top: 1em;
+  /* margin-top: 1em; */
 }
 
 .orderpage-product-card {
