--- a/src/components/HomeModule/SearchBar/SearchBarPage.css
+++ b/src/components/HomeModule/SearchBar/SearchBarPage.css
@@ -2,6 +2,8 @@
   width: 100vw;
   min-height: 100dvh;
   background: #fafbfc;
+  display: flex;
+  flex-direction: column;
 }
 
 .searchbarpage-appbar {
@@ -17,6 +19,7 @@
   gap: 8px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 .searchbarpage-back-btn {
@@ -47,6 +50,7 @@
   flex: 1;
   position: relative;
   min-width: 0;
+  max-width: 80%;
 }
 
 .searchbarpage-input {
@@ -98,8 +102,8 @@
   /* max-width: 700px; */
   margin: 0 auto;
   background: transparent;
-  min-height: calc(100dvh - 56px);
-  padding: 16px 0;
+  /* min-height: calc(100dvh - 56px); */
+  /* padding: 16px 0; */
 }
 
 .searchbarpage-result-card {
