--- a/src/components/OrderModule/OrderPageStyles.css
+++ b/src/components/OrderModule/OrderPageStyles.css
@@ -51,6 +51,13 @@
   margin-bottom: 0.5em;
 }
 
+.orderpage-qty-btn-group{
+  /* width: 100%; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .orderpage-product-img {
   width: 60px;
   height: 60px;
@@ -135,6 +142,10 @@
   display: flex;
   align-items: center;
   gap: 0.5em;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 20%;
   /* margin-left: 1em; */
 }
 
