--- a/src/components/HomeModule/ProductListing/index1.css
+++ b/src/components/HomeModule/ProductListing/index1.css
@@ -2,7 +2,7 @@
   /* padding: 1em; */
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  /* gap: 1em; */
+  gap: 1em;
   /* height: 20%; */
 }
 
